--- a/app/src/main/res/layout/activity_network_check.xml
+++ b/app/src/main/res/layout/activity_network_check.xml
@@ -5,30 +5,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <Button
-        android:id="@+id/btn_config_device"
+        android:id="@+id/btn_check_sdk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Config_Device"
+        android:text="@string/check_sdk"
         android:paddingLeft="20dp"
         android:paddingRight="20dp" />
 
     <Button
-        android:id="@+id/btn_probe_device"
+        android:id="@+id/btn_check_device"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Probe_Device_List"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp" />
-
-    <Button
-        android:id="@+id/btn_my_device"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/My_Device_List"
+        android:text="@string/check_device"
         android:paddingLeft="20dp"
         android:paddingRight="20dp" />
 
 
 </LinearLayout>
-
