--- a/app/src/main/res/layout/login_fragment_layout.xml
+++ b/app/src/main/res/layout/login_fragment_layout.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:pwdHint="@string/password"
+        app:pwdHint="@string/str_password"
         android:background="@drawable/input_bg_round_tran_gray"
         />
     
