1. dnastd ctrl page, param select function 2. hidden main page,"check sdk/dev" function

--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
+        android:visibility="gone"
         android:text="@string/Network_Check"
         />
 
