--- a/app/src/main/res/layout/activity_dev_gateway_manage.xml
+++ b/app/src/main/res/layout/activity_dev_gateway_manage.xml
@@ -13,6 +13,18 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_marginTop="10dp">
+
+    <EditText
+        android:id="@+id/et_pid"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/textDark"
+        android:hint="pid to add"
+        android:textSize="13sp"
+        android:layout_marginBottom="10dp"
+        android:digits="abcdefABCDEF0123456789 "
+        android:background="@drawable/shape_input_view_blue_bg"/>
     
     <TextView
         android:id="@+id/tv_result"
