--- a/app/src/main/res/layout/activity_ir_match_tree_detail.xml
+++ b/app/src/main/res/layout/activity_ir_match_tree_detail.xml
@@ -9,8 +9,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_marginTop="20dp">
+    android:layout_width="match_parent">
     
     <TextView
         android:id="@+id/tv_info"
