--- a/app/src/main/res/drawable/btn_yellow_selector.xml
+++ b/app/src/main/res/drawable/btn_yellow_selector.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/btn_yellow_press"  android:state_enabled="false" />
-    <item android:drawable="@drawable/btn_yellow_press" android:state_pressed="true" />
 
+    <item android:state_enabled="false" android:drawable="@drawable/btn_yellow_press"/>
+    <item android:state_pressed="true" android:drawable="@drawable/btn_yellow_press"/>
     <item android:drawable="@drawable/btn_yellow_normal"/>
-
 </selector>
