--- a/app/src/main/res/layout/activity_ir_match_tree.xml
+++ b/app/src/main/res/layout/activity_ir_match_tree.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.com.broadlink.blappsdkdemo.activity.irCode.IRMatchTreeMainActivity">
+    tools:context="cn.com.broadlink.blappsdkdemo.activity.irCode.IRCodeMatchTreeMainActivity">
     
 <LinearLayout
     android:layout_height="wrap_content"
