1. 注册完成，toast提示并跳转到账户详情页面； 2. 新增更改邮箱和手机功能； 3. 签名文件上传； 4. ap列表全屏； 5. 子设备添加页面增加一个devSubDevAddResultQuery按钮；

--- a/app/src/main/res/layout/activity_dev_gateway_manage.xml
+++ b/app/src/main/res/layout/activity_dev_gateway_manage.xml
@@ -54,6 +54,11 @@
         android:text="Query Scanned Sub Devices"/>
 
     <Button
+        android:id="@+id/bt_query_add_result"
+        style="@style/commonBtn"
+        android:text="Query Sub Device Add Result"/>
+
+    <Button
         android:id="@+id/bt_get_list"
         style="@style/commonBtn"
         android:text="Query Added Sub Devices"/>
