1. 支持子设备定时； 2. fastcon支持单个配置； 3. 清理部分硬编码的url；

--- a/app/src/main/res/layout/activity_dev_main_menu.xml
+++ b/app/src/main/res/layout/activity_dev_main_menu.xml
@@ -126,7 +126,7 @@
             android:id="@+id/bt_fastcon"
             style="@style/commonBtn"
             android:layout_weight="1"
-            android:text="Fastcon Managet"/>
+            android:text="Fastcon Manage"/>
         <Button
             android:id="@+id/bt_rm"
             style="@style/commonBtn"
