将所有页面result显示textview改为edittext，方便开发者复制取值。

--- a/app/src/main/res/layout/activity_dev_apmanual_config.xml
+++ b/app/src/main/res/layout/activity_dev_apmanual_config.xml
@@ -42,9 +42,11 @@
         android:text="config"
         android:id="@+id/bt_commit"/>
     
-    <TextView
-        android:id="@+id/tv_result"
+    <EditText
+        android:id="@+id/et_result"
         android:padding="10dp"
+        android:textSize="13sp"
+        android:gravity="top|left"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/bt_commit"
         android:layout_width="match_parent"
