--- a/app/src/main/res/layout/activity_dev_main_menu.xml
+++ b/app/src/main/res/layout/activity_dev_main_menu.xml
@@ -34,11 +34,12 @@
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/tv_result"
+    <EditText
+        android:id="@+id/et_result"
         android:padding="5dp"
         android:layout_margin="5dp"
-        android:layout_below="@+id/rv_content"
+        android:textSize="13sp"
+        android:gravity="top|left"
         android:layout_width="match_parent"
         android:scrollbarStyle="insideOverlay"
         android:layout_height="wrap_content"
