--- a/app/src/main/res/layout/activity_ir_ac_panel.xml
+++ b/app/src/main/res/layout/activity_ir_ac_panel.xml
@@ -190,12 +190,13 @@
             android:visibility="gone"
             android:textColor="@color/textDark"/>
 
-        <TextView
-            android:id="@+id/tv_result"
+        <EditText
+            android:id="@+id/et_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_dev"
             android:layout_marginTop="10dp"
+            android:textSize="13sp"
+            android:gravity="top|left"
             android:background="@drawable/shape_input_view_blue_bg"
             android:minHeight="200dp"
             android:padding="5dp"
