1. 修正reset时sdk没有重新初始化的问题 2. Gateway Manage页面，新增子设备备份和还原功能（没找到可以测的设备，待自测）

--- a/app/src/main/res/layout/activity_dev_gateway_manage.xml
+++ b/app/src/main/res/layout/activity_dev_gateway_manage.xml
@@ -64,6 +64,16 @@
         android:id="@+id/bt_get_list"
         style="@style/commonBtn"
         android:text="Query Added Sub Devices"/>
+    
+    <Button
+        android:id="@+id/bt_subdev_backup"
+        style="@style/commonBtn"
+        android:text="Sub Device Backup"/>
+    
+    <Button
+        android:id="@+id/bt_subdev_restore"
+        style="@style/commonBtn"
+        android:text="Sub Device Restore"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_list"
