1. 调试子设备备份/还原 2. 红码匹配树发送红码失败时弹出提示 3. 产品列表页面，展示所有请求获得的产品列表 4. 美化设备配置页面

--- a/app/src/main/res/layout/activity_dev_config.xml
+++ b/app/src/main/res/layout/activity_dev_config.xml
@@ -101,6 +101,9 @@
         android:gravity="top|left"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"/>
+        android:minHeight="100dp"
+        android:background="@drawable/shape_input_view_blue_bg"
+        android:textColor="#333"
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
