--- a/app/src/main/res/layout/activity_dev_config.xml
+++ b/app/src/main/res/layout/activity_dev_config.xml
@@ -102,6 +102,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:minHeight="100dp"
+        android:padding="10dp"
         android:background="@drawable/shape_input_view_blue_bg"
         android:textColor="#333"
         android:layout_margin="10dp"/>
