--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -174,6 +174,7 @@
     <!-- rm Control -->
     <declare-styleable name="InputTextView">
         <attr name="hint" format="string"/>
+        <attr name="text" format="string"/>
     </declare-styleable>
 
     <!-- imageLib -->
