--- a/app/src/main/res/layout/activity_ir_ac_pair.xml
+++ b/app/src/main/res/layout/activity_ir_ac_pair.xml
@@ -35,11 +35,6 @@
         android:text="One Key Recognize"/>
 
     <Button
-        android:id="@+id/bt_download_script"
-        style="@style/commonBtn"
-        android:text="Download IR Script"/>
-
-    <Button
         android:id="@+id/bt_get_script_info"
         style="@style/commonBtn"
         android:text="Get IR Script content"/>
@@ -57,11 +52,19 @@
         android:gravity="top|left"
         android:layout_marginTop="10dp"
         android:background="@drawable/shape_input_view_blue_bg"
-        android:minHeight="200dp"
+        android:minHeight="100dp"
         android:padding="10dp"
         android:scrollbarStyle="insideOverlay"
         android:scrollbars="vertical"
         android:textColor="@color/textDark"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_stroke_right_round"
+        />
 
 </LinearLayout>
 </ScrollView>
