更新压力测试，支持选择多个设备

--- a/app/src/main/res/layout/activity_dev_main.xml
+++ b/app/src/main/res/layout/activity_dev_main.xml
@@ -29,7 +29,11 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="@string/My_Device_List"/>
-
+    
+    <Button
+        android:id="@+id/bt_stress_test"
+        style="@style/commonBtn"
+        android:text="Stress Test"/>
 
 </LinearLayout>
 
