--- a/app/src/main/res/layout/activity_dev_apmanual_config.xml
+++ b/app/src/main/res/layout/activity_dev_apmanual_config.xml
@@ -50,7 +50,9 @@
         android:layout_marginTop="20dp"
         android:layout_below="@+id/bt_commit"
         android:layout_width="match_parent"
+        android:minHeight="60dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/shape_input_view_blue_bg"
         android:scrollbarStyle="insideOverlay"
         android:scrollbars="vertical"/>
 </RelativeLayout>
