--- a/app/src/main/res/layout/dialog_dev_stess_test_cmd.xml
+++ b/app/src/main/res/layout/dialog_dev_stess_test_cmd.xml
@@ -6,14 +6,32 @@
               android:padding="10dp"
               android:layout_height="match_parent">
     
-    <cn.com.broadlink.blappsdkdemo.view.InputTextView
-        android:id="@+id/et_cmd"
-        android:layout_marginTop="10dp"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:minHeight="45dp"
-        app:hint="Cmd. default: dev_ctrl"
-        android:background="@drawable/input_bg_round_tran_gray" />
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content">
+        
+        <cn.com.broadlink.blappsdkdemo.view.InputTextView
+            android:id="@+id/et_cmd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="45dp"
+            android:layout_weight="1"
+            app:hint="Cmd. default: dev_ctrl"
+            android:background="@drawable/input_bg_round_tran_gray" />
+
+        <Spinner
+            android:id="@+id/sp_cmd"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_height="45dp"/>
+        
+    </LinearLayout>
     
     <cn.com.broadlink.blappsdkdemo.view.InputTextView
         android:layout_marginTop="10dp"
