1. 新增sp demo 2. 修正自设比备份时列表为空的问题

--- a/app/src/main/res/layout/activity_dev_main_menu.xml
+++ b/app/src/main/res/layout/activity_dev_main_menu.xml
@@ -146,6 +146,11 @@
             style="@style/commonBtn"
             android:layout_weight="1"
             android:text="Query Connect Server"/>
+        <Button
+            android:id="@+id/bt_sp"
+            style="@style/commonBtn"
+            android:layout_weight="1"
+            android:text="Sp Control Demo"/>
 
     </LinearLayout>
     
