--- a/app/src/main/res/layout/activity_dev_sp_demo.xml
+++ b/app/src/main/res/layout/activity_dev_sp_demo.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="vertical"
+             android:padding="20dp">
 
     <ImageView
-        android:layout_gravity="center"
         android:id="@+id/iv_pwr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
-    
+        android:layout_gravity="center"
+        android:layout_marginBottom="100dp"
+        android:textSize="18sp"/>
+
     <TextView
         android:id="@+id/tv_pwr"
-        android:textColor="@color/green"
-        android:layout_gravity="center"
-        android:textSize="40sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textColor="@color/textDark"
+        android:layout_marginBottom="100dp"
+        android:textSize="40sp"/>
+    
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:text="init..."
+        android:textColor="@color/gray"
+        android:textSize="15sp"/>
 </FrameLayout>
