--- a/app/src/main/res/layout/activity_dev_main_menu.xml
+++ b/app/src/main/res/layout/activity_dev_main_menu.xml
@@ -151,7 +151,18 @@
             style="@style/commonBtn"
             android:layout_weight="1"
             android:text="Sp Control Demo"/>
+    </LinearLayout>
+    
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/bt_fw_log"
+            style="@style/commonBtn"
+            android:layout_weight="1"
+            android:text="Firmware Log"/>
     </LinearLayout>
     
 </LinearLayout>
