--- a/app/src/main/res/layout/activity_dev_firmware_log.xml
+++ b/app/src/main/res/layout/activity_dev_firmware_log.xml
@@ -4,31 +4,39 @@
                 android:layout_height="match_parent"
                 android:padding="10dp">
 
-    <TextView
-        android:id="@+id/tv_ip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_input_view_blue_bg"
-        android:padding="10dp"
-        android:textSize="13sp"/>
-
     <Button
         android:id="@+id/bt_clear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_marginLeft="10dp"
         android:text="Clear"/>
-
+    
+    <Button
+        android:id="@+id/bt_view_log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/bt_clear"
+        android:layout_marginLeft="10dp"
+        android:text="View Log"/>
 
     <Switch
         android:id="@+id/swt_enable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
         android:layout_alignBaseline="@+id/bt_clear"
-        android:layout_toLeftOf="@+id/bt_clear"
-        android:checked="true"
-        android:layout_toStartOf="@+id/bt_clear"/>
+        android:checked="true"/>
+
+    <EditText
+        android:id="@+id/tv_ip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_input_view_blue_bg"
+        android:layout_below="@+id/bt_clear"
+        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:textSize="13sp"/>
 
     <EditText
         android:id="@+id/et_data"
