1. 调试rmac推送 2. 优化spdemo页面，支持光度调节 3. 修改子设备备份还原，一帧改为最多4包 4. 增加设备复位按钮

--- a/app/src/main/res/layout/activity_dev_main_menu.xml
+++ b/app/src/main/res/layout/activity_dev_main_menu.xml
@@ -163,6 +163,12 @@
             style="@style/commonBtn"
             android:layout_weight="1"
             android:text="Firmware Log"/>
+        
+        <Button
+            android:id="@+id/bt_reset"
+            style="@style/commonBtn"
+            android:layout_weight="1"
+            android:text="Device Reset"/>
     </LinearLayout>
     
 </LinearLayout>
