1. 调试子设备备份功能（固件更新了接口，每帧发3包） 2. 调试推送（已能收到消息） 3. 每次发包数为3，关闭控制失败时尝试一次远程控制的功能 4. 修改gradle，方便本地调试aar

--- a/app/src/main/res/layout/activity_dev_main_menu.xml
+++ b/app/src/main/res/layout/activity_dev_main_menu.xml
@@ -8,9 +8,10 @@
                 tools:context="cn.com.broadlink.blappsdkdemo.activity.device.DevMainMenuActivity" >
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="20dp">
+    android:paddingBottom="20dp"
+    android:paddingTop="20dp">
     
     <TextView
         android:text="Device Info:"
