--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -59,12 +59,27 @@
         android:scrollbars="vertical"
         android:textColor="@color/textDark"
         android:textSize="13sp"/>
+    
+    <EditText
+        android:id="@+id/et_domain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/et_package"
+        android:background="@drawable/shape_input_view_blue_bg"
+        android:hint="domain(default is empty)"
+        android:minHeight="50dp"
+        android:padding="5dp"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical"
+        android:textColor="@color/textDark"
+        android:textSize="13sp"/>
 
     <EditText
         android:id="@+id/et_license"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/et_package"
+        android:layout_below="@+id/et_domain"
         android:layout_marginTop="20dp"
         android:background="@drawable/shape_input_view_blue_bg"
         android:gravity="start"
