--- a/app/src/main/res/layout/activity_ir_code_main.xml
+++ b/app/src/main/res/layout/activity_ir_code_main.xml
@@ -31,6 +31,14 @@
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="TV Box"/>
+    
+    <Button
+        android:id="@+id/bt_limit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:text="Too Often Limit"/>
 
 </LinearLayout>
 
